fix popup height on mobile screen

--- a/src/components/navbar2/NavB.css
+++ b/src/components/navbar2/NavB.css
@@ -125,7 +125,7 @@ nav.fill ul li a:hover:after {
   .popup{
    display: block;
    z-index: 999;
-   height: 28rem;
+   height: 31rem;
    width:100vw;
    background-color:#1C172F ;
    position: relative;
